<resources>
    <string name="app_name">Upitter</string>
    <string name="empty_field">Empty</string>
    <string name="progress_dialog_title">Still progress&#8230;</string>
    <string name="title_update_dialog" translatable="false">New version available</string>
    <string name="content_update_dialog" translatable="false">Your current version is too old</string>
    <string name="upload_update_dialog" translatable="false">Upload from Google Play</string>
    <string name="close_update_dialog">Close</string>
    <string name="title_no_updates_dialog" translatable="false">No updates</string>
    <string name="content_no_updates_dialog" translatable="false">You current version is actual</string>
    <string name="ok_no_updates_dialog" translatable="false">OK</string>
    <string name="delete_post_title_dialog">Are you sure?</string>
    <string name="delete_post_content_dialog">Do you really want to delete this post?</string>
    <string name="delete_post_ok_dialog" >OK</string>
    <string name="delete_post_cancel_dialog" >Cancel</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="crash_title_message">Upitter had been broken</string>
    <string name="crash_ticker_message">Help us to improve Upitter</string>
    <string name="crash_body_message">Looks like Upitter crash.
        We prepared some information to you, that you could share it with us.</string>
    <string name="title_gallery_activity">Upitter Gallery</string>
    <string name="progress_label_gallery_activity">Still progress&#8230;\nPlease, be patient</string>
    <string name="spinner_all_photos_gallery_activity">All</string>
    <string name="title_gallery_album_preview_activity">Album preview</string>
    <string name="image_of_gallery_album_preview_activity">of</string>
    <string name="edit_gallery_album_preview_activity">Edit</string>
    <string name="apply_gallery_album_preview_activity">Apply</string>
    <string name="user_registration_tab_login_activity">User</string>
    <string name="company_registration_tab_login_activity">Company</string>
    <string name="continue_label_login_activity">Continue</string>
    <string name="google_plus_label_login_activity" translatable="false">Google+</string>
    <string name="enter_phone_number_label_login_activity">Enter your phone number:</string>
    <string name="sign_in_with_login_activity">Sign in with:</string>
    <string name="authorized_successfully_login_activity">Authorized successfully</string>
    <string name="error_authorization_login_activity">Authorization error</string>
    <string name="cancel_authorization_login_activity">Authorization canceled</string>
    <string name="divider_text_login_activity">or</string>
    <string name="skip_registration_label_login_activity">Skip</string>
    <string name="twitter_label_login_activity" translatable="false">Twitter</string>
    <string name="facebook_label_login_activity" translatable="false">Facebook</string>
    <string name="google_label_login_activity" translatable="false">Google</string>
    <string name="dial_code_hint_login_activity">Code</string>
    <string name="dial_body_hint_login_activity">Phone</string>
    <string name="detecting_your_position_login_activity">Detect position&#8230;</string>
    <string name="code_confirm_request_filed">Error</string>
    <string name="search_country_code_choose_menu">Search</string>
    <string name="nothing_found_country_code_choose">Not a country code</string>
    <string name="title_activity_tape">Tape</string>
    <string name="favorites_activity_tape">Favorites</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_code_confirm_activity">Confirm code</string>
    <string name="request_code_edittext_code_confirm_activity">Request code</string>
    <string name="description_label_code_confirm_activity">We are sent to your phone a request code.
        If the authorization is not passed automatically, please enter it in the field as below.</string>
    <string name="login_label_code_confirm_activity">Login</string>
    <string name="title_activity_bussines_registration">Business Registration</string>
    <string name="wrong_request_code_confirm_activity">Wrong request code</string>
    <string name="title_categories_activity">Categories</string>
    <string name="category_select_categories_activity">Select</string>
    <string name="name_label_company_registration_activity">Company name</string>
    <string name="description_label_company_registration_activity">Company description</string>
    <string name="categories_label_company_registration_activity">Choose category</string>
    <string name="contacts_label_company_registration_activity">Set up the contact information:</string>
    <string name="phone_label_company_registration_activity">Contact phone</string>
    <string name="add_phone_label_company_registration_activity">Add phone</string>
    <string name="add_position_label_company_registration_activity">Add position</string>
    <string name="choose_you_current_position_label_company_registration_activity">Choose you current position:</string>
    <string name="site_label_company_registration_activity">Site</string>
    <string name="position_label_company_registration_activity">Your position</string>
    <string name="set_coordinates_company_registration_activity">Set position</string>
    <string name="choose_avatar_company_registration_activity">Choose your\navatar</string>
    <string name="finish_registration_label_company_registration_activity">Finish</string>
    <string name="not_present_category_company_registration_activity">There is no choose categories</string>
    <string name="extra_information_was_not_supply_company_registration_activity">Some extra information was not supply, you want to continue?</string>
    <string name="ignore_extra_company_registration_activity">Ignore</string>
    <string name="attempts_number_company_registration_activity">Wrong code. Attempt:</string>
    <string name="attempts_of_company_registration_activity">of 5</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="add_button_text_activity_quiz">Add Variant</string>
    <string name="hint_input_text_activity_quiz">Quiz Variant</string>
    <string name="title_map_choose_activity">Map</string>
    <string-array name="filter_list" translatable="false">
        <item>DEFAULT</item>
        <item>1997</item>
        <item>AMARO</item>
        <item>BRANNAN</item>
        <item>EARLYBIRD</item>
        <item>HEFE</item>
        <item>HUDSON</item>
        <item>INKWELL</item>
        <item>LOMO</item>
        <item>LORDKELVIN</item>
        <item>NASHVILLE</item>
        <item>RISE</item>
        <item>SIERRA</item>
        <item>SUTRO</item>
        <item>TOASTER</item>
        <item>VALENCIA</item>
        <item>WALDEN</item>
        <item>XPROLL</item>
        <item>CONTRAST</item>
        <item>BRIGHTNESS</item>
        <item>SEPIA</item>
        <item>VIGNETTE</item>
        <item>TONECURVE</item>
        <item>LOOKUP</item>
    </string-array>
    <string name="title_create_post_activity">Create post</string>
    <string name="whats_up_label_create_post_activity">You can publish your services and news here&#8230;</string>
    <string name="whats_up_title_create_post_activity">Title</string>
    <string name="category_label_create_post_activity">Category:</string>
    <string name="address_label_create_post_activity">Address(es)</string>
    <string name="photo_label_create_post_activity">Photos</string>
    <string name="quiz_label_create_post_activity">Quiz</string>
    <string name="send_label_create_post_activity">Send</string>
    <string name="title_activity_people_tape">People Tape</string>
    <string name="choose_address_create_post_activity">Choose address</string>
    <string name="miss_snackbar_create_post_activity">Some information need</string>
    <string name="miss_snackbar_action_create_post_activity">Show</string>
    <string name="miss_title_create_post_activity">Some information need</string>
    <string name="miss_content_create_post_activity">Please complete next fields:</string>
    <string name="miss_location_create_post_activity">Miss location</string>
    <string name="short_title_create_post_activity">Too short title</string>
    <string name="short_description_post_activity">Too short description</string>
    <string name="voice_postfix">vote(-s)</string>
    <string name="create_post_company_tape">Create post</string>
    <string name="user_placeholder_company_tape" translatable="false">Upitter company</string>
    <string name="category_placeholder_company_tape">Some category</string>
    <string name="show_on_map_tape_single_view">Show on map</string>
    <string name="edit_post_tape_single_view">Edit post</string>
    <string name="share_tape_single_view">Share</string>
    <string name="complain_tape_single_view">Complain</string>
    <string name="delete_post_tape_single_view">Delete post</string>
    <string name="watch_count_tape_single_view">0</string>
    <string name="about_app_navigation_drawer">About app</string>
    <string name="favorites_navigation_drawer">Favorites</string>
    <string name="logout_navigation_drawer">Logout</string>
    <string name="extra_navigation_drawer">Extra</string>
    <string name="notifications_navigation_drawer">Notifications</string>
    <string name="settings_navigation_drawer">My account</string>
    <string name="tape_navigation_drawer">Tape</string>
    <string name="subscriptions_navigation_drawer" translatable="false">Subscriptions</string>
    <string name="sign_in_navigation_drawer" translatable="false">Sign in</string>
    <string name="title_choose_location_activity">Choose location</string>
    <string name="choose_category">Choose category</string>
    <string name="clear_category">Clear category</string>
    <string name="title_activity_company_settings">Settings</string>
    <string name="company_name_company_settings">Company name</string>
    <string name="summary_rating_company_information" translatable="false">All likes:</string>
    <string name="description_company_information">Description:</string>
    <string name="contacts_company_information">Contacts:</string>
    <string name="activities_company_information">Activity:</string>
    <string name="universal_image_content_description" translatable="false">Upitter image</string>
    <string name="nickname_edittext">Nickname</string>
    <string name="name_edititext">Name</string>
    <string name="secondname_edittext">Second name</string>
    <string name="save_button">Save</string>
    <string name="men_radio">Men</string>
    <string name="women_radio">Women</string>
    <string name="not_selected_radio">Not selected</string>
</resources>