<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_tape"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/tape_navigation_drawer"
            />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_white_24dp"
            android:title="@string/favorites_navigation_drawer"
            />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_active_white_24dp"
            android:title="@string/notifications_navigation_drawer"
            />
    </group>

    <item
        android:title="@string/extra_navigation_drawer">

        <menu>
            <group>

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_white_24dp"
                    android:title="@string/settings_navigation_drawer"
                    />

                <item
                    android:id="@+id/nav_app"
                    android:icon="@drawable/ic_info_outline_white_24dp"
                    android:title="@string/about_app_navigation_drawer"
                    />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit_to_app_white_24dp"
                    android:title="@string/logout_navigation_drawer"
                    />
            </group>
        </menu>
    </item>

</menu>
