<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_show_on_map"
        android:orderInCategory="100"
        android:title="@string/show_on_map_tape_single_view"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share_tape_single_view"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/action_complain"
        android:orderInCategory="100"
        android:title="@string/complain_tape_single_view"
        app:showAsAction="collapseActionView"
        />
</menu>