<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.sasd97.upitter.ui.PeopleSettingsActivity"
    tools:showIn="@layout/activity_people_settings">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_nickname_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname_edittext"
            android:layout_marginTop="8dp"
            app:met_floatingLabel="highlight"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_edititext"
            android:layout_marginTop="8dp"
            app:met_floatingLabel="highlight"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_surname_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secondname_edittext"
            android:layout_marginTop="8dp"
            app:met_floatingLabel="highlight"
            />

        <RadioGroup
            android:id="@+id/sex_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Upitter.Radiogroup">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/men_radio"
                />

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/women_radio"
                />

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:text="@string/not_selected_radio"
                />
        </RadioGroup>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_short_margin"
            android:layout_marginLeft="@dimen/activity_short_margin"
            android:layout_marginRight="@dimen/activity_short_margin"
            android:padding="8dp"
            android:text="@string/save_button"
            style="@style/Upitter.Button.Rounded.Upitter"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
