<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context=".ui.CodeVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo_big"
            android:layout_marginTop="@dimen/activity_extra_margin"
            android:contentDescription="@string/universal_image_content_description"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/description_label_code_confirm_activity"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/request_code_label_code_confirm_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:digits="+0123456789"
            android:maxLength="14"
            android:inputType="numberDecimal"
            android:hint="@string/request_code_edittext_code_confirm_activity"
            />

        <Button
            android:id="@+id/login_label_code_confirm_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_long_margin"
            android:layout_marginLeft="@dimen/activity_short_margin"
            android:layout_marginRight="@dimen/activity_short_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/login_label_code_confirm_activity"
            android:onClick="onLoginClick"
            style="@style/Upitter.Button.Rounded.Watermelon"
            />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
