<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ui.fragments.CompanyAuthorizationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorStartBackground"
        android:text="@string/enter_phone_number_label_login_activity"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/country_display_company_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:textSize="@dimen/activity_medium_text"
        android:textColor="@color/colorStartBackground"
        android:clickable="false"
        android:text="@string/detecting_your_position_login_activity"
        tools:text="Russian Federation"
        />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:orientation="horizontal"
        app:columnCount="2"
        app:rowCount="1">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/country_dial_code_company_login_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:digits="+0123456789"
            android:maxLength="8"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/create_post_cursor_drawable"
            android:enabled="false"
            android:hint="@string/dial_code_hint_login_activity"
            app:met_floatingLabel="highlight"
            app:layout_columnWeight="3"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/country_body_company_login_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:digits="+0123456789"
            android:maxLength="14"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/create_post_cursor_drawable"
            android:enabled="false"
            android:hint="@string/dial_body_hint_login_activity"
            app:met_floatingLabel="highlight"
            app:layout_columnWeight="7"
            />

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/continue_registration_button_company_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_long_margin"
        android:layout_marginLeft="@dimen/activity_short_margin"
        android:layout_marginRight="@dimen/activity_short_margin"
        android:text="@string/continue_label_login_activity"
        style="@style/Upitter.Button.Rounded.Watermelon"
        />

</LinearLayout>
