<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.CompanyRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.sasd97.upitter.components.ImageUploaderView
            android:id="@+id/avatar_url_business_registration_base_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/name_edittext_business_registration_base_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_floatingLabel="highlight"
                    android:hint="@string/name_label_company_registration_activity"
                    app:met_maxCharacters="20"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/description_edittext_business_registration_base_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_floatingLabel="highlight"
                    android:hint="@string/description_label_company_registration_activity"
                    app:met_maxCharacters="200"
                    />
        </LinearLayout>

        <RelativeLayout
            style="@style/Upitter.LayoutButton.Rounded.BabyBlue.Light"
            android:id="@+id/categories_choose_business_registration_base_fragment"
            android:layout_width="match_parent"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_category"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="@string/categories_label_company_registration_activity"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/contacts_label_company_registration_activity"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/phones_recyclerview_registration_base_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            />

        <RelativeLayout
            style="@style/Upitter.LayoutButton.Rounded.BabyBlue.Light"
            android:id="@+id/add_phone_button_registration_base_fragment"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_add_more"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="@string/add_phone_label_company_registration_activity"
                />
        </RelativeLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/site_edittext_business_registration_base_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="50"
            android:layout_marginTop="8dp"
            android:hint="@string/site_label_company_registration_activity"
            app:met_floatingLabel="highlight"
            />

        <Button
            android:id="@+id/set_position_business_registration_base_fragment"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_long_margin"
            android:layout_marginLeft="@dimen/activity_short_margin"
            android:layout_marginRight="@dimen/activity_short_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/set_coordinates_company_registration_activity"
            style="@style/Upitter.Button.Rounded.Watermelon"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
